# Competitive_code_failing_tc_generator

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  api.py  langgraph.json  main.py  pyproject.toml  requirements.txt  tessting.py  testing_DELETE_IT.py
graph/: consts.py  graph.py  state.py
graph/chains/: __init__.py  code_extractor.py  failing_tc_extractor.py  final_explaination.py  rephrasing_tc.py  simplified_tc_explaination.py  simplify_tc_system.py
graph/helpers/: __init__.py  checkValidity.py  explanation_parser.py
graph/nodes/: __init__.py  final_explaination.py  generate_failing_tc.py  rephraser_tc.py  retrieve.py  simplify_failing_tc.py  validate_test_case.py
static/: style.css
templates/: docs.html  index.html
